Fix display issue with gift icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet/less" href="src/css/styles.less">
+<!--    <link rel="stylesheet/less" href="src/css/styles.less">-->
+    <link rel="stylesheet/less" href="dist/styles.min.css">
 <!--    <link rel="stylesheet/less" href="src/css/adaptive.less">-->
     <script src="js/less.js"></script>
     <title>Macaroon</title>
@@ -271,13 +272,13 @@
         <div class="phone footer__phone">
             <span>+375 (29) 368-98-68</span>
         </div>
-    </div>
-    <div class="gift">
-        <div class="gift__image">
-            <img src="images/present.png" alt="present" class="gift__image-img">
-        </div>
-        <div class="gift__text">
-            <span class="gift__text-span">Оформите заказ <br> и получите подарок!</span>
+        <div class="gift">
+            <div class="gift__image">
+                <img src="images/present.png" alt="present" class="gift__image-img">
+            </div>
+            <div class="gift__text">
+                <span class="gift__text-span">Оформите заказ <br> и получите подарок!</span>
+            </div>
         </div>
     </div>
 </footer>
